--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_PROJECT_ID=668425ce000b4cfbe7d7
 VITE_DATABASE_ID=668427620036a1d17a92
 VITE_COLLECTION_ID_RES=66842795001b2ce84035
 VITE_COLLECTION_ID_BRANDS=668441bc00398ebbcfc9
+VITE_COLLECTION_ID_DISHES=66958232001381377f0e
