--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@reduxjs/toolkit": "^2.2.7",
     "appwrite": "^15.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
